# frame2

./: .dotbot  .gitignore  .pdm-python  pyproject.toml
frame.egg-info/: PKG-INFO  requires.txt
src/frame/: __init__.py  actions.py  cli.py  game.py  images.py  main.py  model.py  notification_targets.py  parsers.py  plugin_interface.py  plugin_loading.py  registry.py  renderers.py  shell.py  utility.py  values.py
src/frame/examples/: example_config.yaml
src/frame/plugins/: system_information.py
src/frame/static/: script.js  style.css
